--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,15 @@
 
 
 <% if user_signed_in? %>
-  <%# user name %>
   <%= current_user.full_name %>  |
   <%= link_to "Log Out", logout_path, method: :delete %>
 <% else %>
   <%= link_to "Create Account", signup_path%>  |
   <%= link_to "Log In", login_path%>
 <% end %>
-
+<div class='container'>
+  <%= flash_messages %>
+</div>
 <%= yield %>
 
 
